--- a/MarkGrandtour/index.html
+++ b/MarkGrandtour/index.html
@@ -12,17 +12,20 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
+            background-color: #333333;
+            /* Dark gray background */
+            color: white;
+            /* White text for contrast */
         }
 
         .banner {
-            background-image: url('tgv02b.jpg');
+            background-image: url('tgv02.jpg');
             background-size: cover;
             background-position: center;
             height: 400px;
             display: flex;
             justify-content: center;
             align-items: center;
-            color: white;
             text-align: center;
             position: relative;
         }
@@ -32,6 +35,7 @@
             font-size: 60px;
             color: #f2f2f2;
             background-color: rgba(0, 0, 0, 0.5);
+            /* Transparent black background for readability */
             padding: 20px;
             border-radius: 10px;
         }
@@ -45,6 +49,10 @@
         .content {
             padding: 20px;
             text-align: center;
+            background-color: #4d4d4d;
+            /* Lighter gray background for content section */
+            margin: 20px;
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -57,7 +65,8 @@
         </div>
     </div>
     <div class="content">
-        <p>This is a simple static website with a banner background.</p>
+        <p>This is a simple static website with a banner background, now styled with a dark theme for better contrast.
+        </p>
     </div>
 </body>
 
