--- a/MarkGrandtour/index.html
+++ b/MarkGrandtour/index.html
@@ -1,62 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Grand Tour 2024</title>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <style>
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #333333;
-            /* Dark gray background */
-            color: white;
-            /* White text for contrast */
-        }
-
-        .banner {
-            background-image: url('tgv02.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 400px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            position: relative;
-        }
-
-        .banner h1 {
-            font-family: 'Lobster', cursive;
-            font-size: 60px;
-            color: #f2f2f2;
-            background-color: rgba(0, 0, 0, 0.5);
-            /* Transparent black background for readability */
-            padding: 20px;
-            border-radius: 10px;
-        }
-
-        .banner h2 {
-            font-size: 30px;
-            color: #eaeaea;
-            margin-top: 10px;
-        }
-
-        .content {
-            padding: 20px;
-            text-align: center;
-            background-color: #4d4d4d;
-            /* Lighter gray background for content section */
-            margin: 20px;
-            border-radius: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
 </head>
-
 <body>
     <div class="banner">
         <div>
@@ -65,9 +15,7 @@
         </div>
     </div>
     <div class="content">
-        <p>This is a simple static website with a banner background, now styled with a dark theme for better contrast.
-        </p>
+        <p>This is a simple static website with a banner background, now styled with a dark theme for better contrast.</p>
     </div>
 </body>
-
 </html>
