Add content to the design

--- a/MarkGrandtour/index.html
+++ b/MarkGrandtour/index.html
@@ -16,6 +16,10 @@
     </div>
     <div class="content">
         <p>This is a simple static website with a banner background, now styled with a dark theme for better contrast.</p>
+        
+        <!-- Link to the blog entry -->
+        <p><a href="blog-entry.html" style="color: #007BFF; text-decoration: none;">Read the latest travel blog entry: The Curious Journey of a Bag</a></p>
     </div>
 </body>
 </html>
+
