Add back in the full text for the day

--- a/MarkGrandtour/blog-entry-1.html
+++ b/MarkGrandtour/blog-entry-1.html
@@ -6,7 +6,8 @@
     </div>
     <hr class="blue-line">
     <div class="blog-content">
-        <p>It is Thursday, the 12th of September. Today, I downloaded my first tracking app, something I had never thought I would do...</p>
+        <p>It is Thursday, the 12th of September. Today, I downloaded my first tracking app, something I had never thought I would do. The app is called Send My Bag, and it allows me to follow the whereabouts of my luggage. The bag was collected yesterday. Now, according to the app, it has reached the Channel Islands, having crossed the sea on an overnight ferry from Poole, transported by FedEx.</p>
+        <p>Strange, isn’t it, how we can now trace the movements of an ordinary bag as though it were something of great importance? Technology, it seems, keeps finding ways to surprise us.</p>
     </div>
     <img src="dalle_bags01.jpg" alt="Travel Image">
     <hr class="blue-line">
