responsive; rework font sizes

--- a/MarkGrandtour/index.html
+++ b/MarkGrandtour/index.html
@@ -10,9 +10,9 @@
 <body>
     <!-- Fixed header/banner -->
     <div class="banner">
-        <div>
-            <h1>The Grand Tour 2024</h1>
-            <h2>Destination Italy via the European Train Network</h2>
+        <div class="banner-text">
+            <h1 class="banner-h1">The Grand Tour 2024</h1>
+            <h2 class="banner-h2">Destination Italy via the European Train Network</h2>
         </div>
     </div>
 
