--- a/MarkGrandtour/index.html
+++ b/MarkGrandtour/index.html
@@ -12,7 +12,7 @@
     <div class="banner">
         <div class="banner-text">
             <h1 class="banner-h1">The Grand Tour 2024</h1>
-            <h2 class="banner-h2">Destination Italy via the European Train Network</h2>
+            <h2 class="banner-h2">Destination Italy, via the European Train Network</h2>
         </div>
     </div>
 
