use simple carousel for photo display

--- a/MarkGrandtour/blog-entry-1.html
+++ b/MarkGrandtour/blog-entry-1.html
@@ -1,4 +1,3 @@
-<!-- Blog entry content for The Curious Journey of a Bag -->
 <div class="blog-entry">
     <div class="blog-header">
         <h1>The Curious Journey of a Bag</h1>
@@ -13,6 +12,10 @@
         <p>Strange, isn’t it, how we can now trace the movements of an ordinary bag as though it were something of great
             importance? Technology, it seems, keeps finding ways to surprise us.</p>
     </div>
-    <img class="blog-image" src="dalle_bags01.jpg" alt="Luggage sitting by the canal in Venice">
+    <div class="carousel">
+        <div class="carousel-track">
+            <div class="carousel-item"><img src="dalle_bags01.jpg" alt="Photo 1"></div>
+        </div>
+    </div>
     <hr class="blue-line">
 </div>
