--- a/MarkGrandtour/blog-entry-2.html
+++ b/MarkGrandtour/blog-entry-2.html
@@ -5,12 +5,20 @@
     </div>
     <hr class="blue-line">
     <div class="blog-content">
-        <p><i>[verbatim]</i> Saturday the 14th of September. We leave from Sherborne station tomorrow at 11:00. I check the barometer.
+        <p><i>[verbatim]</i> Saturday the 14th of September. We leave from Sherborne station tomorrow at 11:00. I check
+            the barometer.
             Gone up through the ceiling. We're in for a period of high pressure. Just when we're leaving. Wonderful golf
-            weather. Too bad. 1:00. The House guardian arrives by car. Our dear old friend Janet. She's gonna look
+            weather. Too bad. 1:00. The house guardian arrives by car. Our dear old friend Janet. She's gonna look
             after the place. Spend the rest of the day re-packing, re-thinking, sorting her out. Well, it's now
             6:00. And we really are ready to go. Dinner at 7. More tomorrow.</p>
     </div>
-    <img class="blog-image" src="x" alt="x">
+    <div class="carousel">
+        <div class="carousel-track">
+            <div class="carousel-item"><img src="photos/2_a.jpg" alt="Photo 1"></div>
+            <div class="carousel-item"><img src="photos/2_ba.jpg" alt="Photo 2"></div>
+            <div class="carousel-item"><img src="photos/2_jan2.jpg" alt="Photo 3"></div>
+        </div>
+    </div>
+
     <hr class="blue-line">
 </div>
