--- a/MarkGrandtour/index.html
+++ b/MarkGrandtour/index.html
@@ -21,8 +21,12 @@
         <p>Select a blog post to read:</p>
         <ul>
             <li><a href="#" onclick="loadBlogPost('blog-entry-1.html')">The Curious Journey of a Bag</a></li>
-            <li><a href="#" onclick="loadBlogPost('blog-entry-2.html')">A Night in Venice</a></li>
-            <li><a href="#" onclick="loadBlogPost('blog-entry-3.html')">Train Ride through Tuscany</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry-2.html')">Fine weather... just as we leave</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry-3.html')">Don't travel on a Sunday</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry-4.html')">xDon't travel on a Sunday</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry-5.html')">xDon't travel on a Sunday</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry-6.html')">xDon't travel on a Sunday</a></li>
+            
         </ul>
 
         <!-- Placeholder where blog content will be injected -->
