--- a/MarkGrandtour/blog-entry-5.html
+++ b/MarkGrandtour/blog-entry-5.html
@@ -1,6 +1,6 @@
 <div class="blog-entry">
     <div class="blog-header">
-        <h1>Morning at the hotel in Amsterdam</h1>
+        <h1>Relaxation med Rijksmuseum</h1>
         <p class="meta-info">event date: 18.09.2024<br>blog created: 19.09.2024<br>modified: --</p>
     </div>
     <hr class="blue-line">
