--- a/MarkGrandtour/blog-entry-6.html
+++ b/MarkGrandtour/blog-entry-6.html
@@ -1,27 +1,29 @@
 <div class="blog-entry">
     <div class="blog-header">
-        <h1>Morning at the hotel in Amsterdam</h1>
+        <h1>Traffic and dead meat</h1>
         <p class="meta-info">event date: 17.09.2024<br>blog created: 19.09.2024<br>modified: --</p>
     </div>
     <hr class="blue-line">
     <div class="blog-content">
-        <p><i>[verbatim]</i> Wednesday, 18th of September. Today we're going on a much more leisurely approach. Down to
-            the Van Gogh Museum and to have lunch at the cafe. At the restaurant. Near the concert cabal. There's a
-            substantial park there to walk through, which we'll do as well. Had a good breakfast again this morning.
-            Probably leave at about 11/30 12:00-ish, I suppose by taxi. Taxi seems to be very essential. Trams. Lots of
-            trams, but we don't know the way around yet, so we're just going to have to have to bite the bullet.
-            Yesterday was probably over heavy. Spent quite a long time at the right museum. Fantastic place. Solve my.
-            Wellington portrait Problem Solve My Napoleon portrait problem. Saw a couple of other pictures that I really
-            want. They have a thing called the Rice Museum studio. Which permits you to download very high quality
-            digital text images. For free, amazingly. Must still experiment with this when we get back to London. Then
-            we had a very good lunch at the right museum cafe. Were quite exceptional, in fact. And then an absolutely
-            wonderful canal boat cruise around the city. I think by then we was taught indeed a bit tired. Had a rest in
-            the park. Then got another taxi to the restaurant. Which we booked. Not particularly spectacular but fairly
-            spectacular price. Got back at the hotel about 9:00, I guess. Slept like a complete log. Still loving
-            Amsterdam architecture. Exquisite people seem to be very nice. Food, relatively pedestrian, but what the
-            hell? The water scenery is excellent. There's obviously lots to do. I probably didn't do enough research on
-            Amsterdam, but I think I'll Van Gogh today, followed by the concert cabal. We'll probably see us. Happily
-            enough, tomorrow train. End of recording.
+        <p><i>[verbatim]</i> Wednesday The 18th, still in Amsterdam. Some thoughts on the traffic system of Amsterdam.
+            Their priorities are quite clear. First trams, second two wheels of all descriptions, third motor cars and
+            4th pedestrians. Basically, the pedestrians just have to look after themselves. Any pedestrian that wanders
+            into the wrong space is deadmeat. Being a pedestrian requires constant attention. Second thought is that the
+            use of electric bikes will be presumably the introduction of the electric bikes. Has made the whole cycling
+            business completely different. They enable cyclists to go, it seems to me, extremely fast. And to be
+            extremely aggressive. Taxis fall somewhere between trams. And bicycles. And have to be relatively on the
+            ball to work out which particular part of the road to be in. As for driving, well, I'm glad I don't have to
+            do it. Getting in lane is a critical factor. Whether you're going straight, turning left or turning right.
+            And once you've got, once you've made the decision, there's no going back.
+            All buddy Tom.
+            Uhm. Taxis. Seemed to have to force their way around the place. As for aggression, well, it seems to me the
+            cyclists are extremely aggressive, but their aggression is not taken out of pedestrians who just cower. The
+            aggression of cyclists has taken out on each other, but principally against the cause. Motorists have to be
+            extremely careful. No cyclists wear helmets as well. That's a good point. Cyclists go seem to have a a war
+            of aggression against motors against motorists. And this is something I think we could learn from. In
+            planning our systems in London. Because in the end, cyclists think they own the city and to agree in
+            Amsterdam they do. They do in London. So much for that keep keep your head down if you're walking.
+
 
         </p>
     </div>
