blog re-org photos

--- a/MarkGrandtour/blog-entry-5.html
+++ b/MarkGrandtour/blog-entry-5.html
@@ -5,7 +5,7 @@
     </div>
     <hr class="blue-line">
     <div class="blog-content">
-        <p><i>[verbatim]</i> TWednesday, 18th of September. Today we're going on a much more leisurely approach. Down to
+        <p><i>[verbatim]</i> Wednesday, 18th of September. Today we're going on a much more leisurely approach. Down to
             the Van Gogh Museum and to have lunch at the cafe. At the restaurant. Near the concert cabal. There's a
             substantial park there to walk through, which we'll do as well. Had a good breakfast again this morning.
             Probably leave at about 11/30 12:00-ish, I suppose by taxi. Taxi seems to be very essential. Trams. Lots of
@@ -27,21 +27,9 @@
     </div>
     <div class="carousel">
         <div class="carousel-track">
-            <div class="carousel-item"><img src="photos/03_Eurostart_01.png" alt="Photo 1"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_02.png" alt="Photo 2"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_03_blur.png" alt="Photo 3"></div>
-            <div class="carousel-item"><img src="photos/3_carrg_blur.jpg" alt="Photo 4"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_04_blur.png" alt="Photo 5"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_05.png" alt="Photo 6"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_06.png" alt="Photo 7"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_07.png" alt="Photo 8"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_08.png" alt="Photo 9"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_09.png" alt="Photo 10"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_10.png" alt="Photo 11"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_11.png" alt="Photo 12"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_12.png" alt="Photo 13"></div>
-
-
+            <div class="carousel-item"><img src="photos/04_rijk.png" alt="Photo 1"></div>
+            <div class="carousel-item"><img src="photos/04_nappy.png" alt="Photo 2"></div>
+            <div class="carousel-item"><img src="photos/04_wlly.png" alt="Photo 3"></div>
         </div>
     </div>
 
