--- a/MarkGrandtour/blog-entry-4.html
+++ b/MarkGrandtour/blog-entry-4.html
@@ -26,9 +26,9 @@
     </div>
     <div class="carousel">
         <div class="carousel-track">
-            <div class="carousel-item"><img src="photos/03_Eurostart_01.png" alt="Photo 1"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_02.png" alt="Photo 2"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_03_blur.png" alt="Photo 3"></div>
+            <div class="carousel-item"><img src="photos/04_Amstel.png" alt="Photo 1"></div>
+            
+            
         </div>
     </div>
 
