--- a/MarkGrandtour/blog-entry-6.html
+++ b/MarkGrandtour/blog-entry-6.html
@@ -29,19 +29,10 @@
     </div>
     <div class="carousel">
         <div class="carousel-track">
-            <div class="carousel-item"><img src="photos/03_Eurostart_01.png" alt="Photo 1"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_02.png" alt="Photo 2"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_03_blur.png" alt="Photo 3"></div>
-            <div class="carousel-item"><img src="photos/3_carrg_blur.jpg" alt="Photo 4"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_04_blur.png" alt="Photo 5"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_05.png" alt="Photo 6"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_06.png" alt="Photo 7"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_07.png" alt="Photo 8"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_08.png" alt="Photo 9"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_09.png" alt="Photo 10"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_10.png" alt="Photo 11"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_11.png" alt="Photo 12"></div>
-            <div class="carousel-item"><img src="photos/03_Eurostart_12.png" alt="Photo 13"></div>
+            <div class="carousel-item"><img src="photos/04_bike park.png" alt="Photo 1"></div>
+            <div class="carousel-item"><img src="photos/04_big bike.png" alt="Photo 2"></div>
+            <div class="carousel-item"><img src="photos/04_big bike 2.png" alt="Photo 3"></div>
+           
 
 
         </div>
