--- a/MarkGrandtour/index.html
+++ b/MarkGrandtour/index.html
@@ -28,7 +28,7 @@
             <li><a href="#" onclick="loadBlogPost('blog-entry-4.html')">Morning at the hotel in Amsterdam</a></li>
             <li><a href="#" onclick="loadBlogPost('blog-entry-5.html')">Relaxation med Rijksmuseum</a></li>
             <li><a href="#" onclick="loadBlogPost('blog-entry-6.html')">Traffic and dead meat</a></li>
-
+            <li><a href="#" onclick="loadBlogPost('blog-entry-7.html')">What is a historian?</a></li>
         </ul>
 
         <!-- Placeholder where blog content will be injected -->
