bulk upload photos

--- a/MarkGrandtour/index.html
+++ b/MarkGrandtour/index.html
@@ -29,6 +29,11 @@
             <li><a href="#" onclick="loadBlogPost('blog-entry-5.html')">Relaxation med Rijksmuseum</a></li>
             <li><a href="#" onclick="loadBlogPost('blog-entry-6.html')">Traffic and dead meat</a></li>
             <li><a href="#" onclick="loadBlogPost('blog-entry-7.html')">What is a historian?</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry20240921.html')">2000+ years of Grafitti</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry20240922.html')">Chillin'</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry20240926.html')">Trains and Calzone</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry20240929.html')">Hotel du Lac</a></li>
+            <li><a href="#" onclick="loadBlogPost('blog-entry20240930.html')">A 4G signal is a wonderful thing</a></li>
         </ul>
 
         <!-- Placeholder where blog content will be injected -->
