dots for fingers

--- a/SvgPrimer/fretboard.html
+++ b/SvgPrimer/fretboard.html
@@ -1,5 +1,26 @@
-<body style="background:#222; margin:0;">
-  <div style="padding:20px;">
-    <object type="image/svg+xml" data="fret.svg"></object>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>A Major Chord Diagram</title>
+  <style>
+    body {
+      background-color: #222;
+      margin: 0;
+      padding: 20px;
+    }
+    svg {
+      display: block;
+      margin: auto;
+    }
+  </style>
+</head>
+<body>
+  <!-- Main fretboard SVG -->
+  <object type="image/svg+xml" data="fretboard_with_a_major.svg"></object>
+
+  <!-- Chord markers SVG -->
+  <!-- <object type="image/svg+xml" data="a_major_markers.svg"></object> -->
 </body>
+</html>
+
