--- a/SvgPrimer/fretboard-view.html
+++ b/SvgPrimer/fretboard-view.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="fretboard.css">
 </head>
 <body>
-  <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" class="fretboard">
+  <svg xmlns="http://www.w3.org/2000/svg" 
+    width="200" height="200" 
+    viewBox="-10 -10 220 220"
+    preserveAspectRatio="xMidYMid meet"
+    class="fretboard">
 
     <!-- Strings - x interval:30px, y:0 -->
     <line class="string-line" x1="10" y1="10" x2="10" y2="190" />
