mark the chord block

--- a/SvgPrimer/fretboard-view.html
+++ b/SvgPrimer/fretboard-view.html
@@ -27,12 +27,17 @@
     <line class="fret-bar" x1="10" y1="130" x2="160" y2="130" />
     <line class="fret-bar" x1="10" y1="170" x2="160" y2="170" />
 
-    <!-- Position Marker -->
+    <!-- inject:positions -->
+    <!-- START positions -->
+    <!-- Each entry follows finger-code convention: SX = mute, S0 = open, S1–S9 = held fret -->
+
+    <!-- Example: Hold fret 2 on string 1 -->
     <circle class="dot-active" cx="70" cy="38" r="6" />
     <text class="fret-label" x="75" y="5">3rd</text>
 
-    <!-- Muted string label -->
+    <!-- Muted string example -->
     <text class="string-muted" x="6" y="5">X</text>
+    <!-- END positions -->
 
   </svg>
 </body>
