--- a/SvgPrimer/fretboard-view.html
+++ b/SvgPrimer/fretboard-view.html
@@ -31,13 +31,34 @@
     <!-- START positions -->
     <!-- Each entry follows finger-code convention: SX = mute, S0 = open, S1–S9 = held fret -->
 
-    <!-- Example: Hold fret 2 on string 1 -->
-    <circle class="dot-active" cx="70" cy="38" r="6" />
-    <text class="fret-label" x="75" y="5">3rd</text>
+<!-- inject:positions -->
+<!-- START positions -->
 
-    <!-- Muted string example -->
-    <text class="string-muted" x="6" y="5">X</text>
-    <!-- END positions -->
+<!-- inject:positions -->
+<!-- START positions -->
+
+<!-- String 6 – Muted -->
+<text class="string-muted" x="10" y="5">X</text>
+
+<!-- String 5, Fret 0 – Open -->
+<text class="fret-label" x="40" y="5">0</text>
+
+<!-- String 4, Fret 2 -->
+<circle class="dot-active" cx="70" cy="90" r="6" />
+<text class="fret-label" x="70" y="85">2</text>
+
+<!-- String 3, Fret 2 -->
+<circle class="dot-active" cx="100" cy="90" r="6" />
+<text class="fret-label" x="100" y="85">2</text>
+
+<!-- String 2, Fret 2 -->
+<circle class="dot-active" cx="130" cy="90" r="6" />
+<text class="fret-label" x="130" y="85">2</text>
+
+<!-- String 1, Fret 0 – Open -->
+<text class="fret-label" x="160" y="5">0</text>
+
+<!-- END positions -->
 
   </svg>
 </body>
