Display the chord name

--- a/SvgPrimer/fretboard-view.html
+++ b/SvgPrimer/fretboard-view.html
@@ -29,6 +29,7 @@
 
 <!-- inject:positions -->
 <!-- START positions -->
+<text class="fret-label" x="85" y="-2">A Major</text>
 <text class="string-muted" x="10" y="5">X</text>
 <text class="fret-label" x="40" y="5">0</text>
 <circle class="dot-active" cx="70" cy="90" r="6" />
