--- a/SvgPrimer/fretboard-view.html
+++ b/SvgPrimer/fretboard-view.html
@@ -29,12 +29,12 @@
 
 <!-- inject:positions -->
 <!-- START positions -->
-<text class="fret-label" x="85" y="-2">A Major</text>
+<text class="fret-label" x="85" y="-2">C Major</text>
 <text class="string-muted" x="10" y="5">X</text>
-<text class="fret-label" x="40" y="5">0</text>
+<circle class="dot-active" cx="40" cy="120" r="6" />
 <circle class="dot-active" cx="70" cy="80" r="6" />
-<circle class="dot-active" cx="100" cy="80" r="6" />
-<circle class="dot-active" cx="130" cy="80" r="6" />
+<text class="fret-label" x="100" y="5">0</text>
+<circle class="dot-active" cx="130" cy="40" r="6" />
 <text class="fret-label" x="160" y="5">0</text>
 <!-- END positions -->
 
