--- a/SvgPrimer/chord-c-major.html
+++ b/SvgPrimer/chord-c-major.html
@@ -8,7 +8,7 @@
 <body>
   <svg xmlns="http://www.w3.org/2000/svg"
        width="200" height="200"
-       viewBox="-10 -10 220 220"
+       viewBox="-10 -20 220 220"
        preserveAspectRatio="xMidYMid meet"
        class="fretboard">
 
@@ -20,22 +20,24 @@
     <line class="string-line" x1="130" y1="10" x2="130" y2="190" />
     <line class="string-line" x1="160" y1="10" x2="160" y2="190" />
 
-    <!-- Frets -->
+    <!-- inject:frets -->
+    <!-- START frets -->
     <line class="fret-bar" x1="8" y1="10" x2="162" y2="10" />
     <line class="fret-bar" x1="10" y1="50" x2="160" y2="50" />
     <line class="fret-bar" x1="10" y1="90" x2="160" y2="90" />
     <line class="fret-bar" x1="10" y1="130" x2="160" y2="130" />
     <line class="fret-bar" x1="10" y1="170" x2="160" y2="170" />
+    <!-- END frets -->
 
     <!-- inject:positions -->
     <!-- START positions -->
-<text class="fret-label" x="85" y="-2">C Major</text>
-<text class="string-muted" x="10" y="5">X</text>
-<circle class="dot-active" cx="40" cy="120" r="6" />
-<circle class="dot-active" cx="70" cy="80" r="6" />
-<text class="fret-label" x="100" y="5">0</text>
-<circle class="dot-active" cx="130" cy="40" r="6" />
-<text class="fret-label" x="160" y="5">0</text>
+    <text class="fret-label" x="85" y="-2">C Major</text>
+    <text class="string-muted" x="10" y="5">X</text>
+    <circle class="dot-active" cx="40" cy="120" r="6" />
+    <circle class="dot-active" cx="70" cy="80" r="6" />
+    <text class="fret-label" x="100" y="5">0</text>
+    <circle class="dot-active" cx="130" cy="40" r="6" />
+    <text class="fret-label" x="160" y="5">0</text>
     <!-- END positions -->
   </svg>
 </body>
