--- a/SvgPrimer/chord-c-major.html
+++ b/SvgPrimer/chord-c-major.html
@@ -12,21 +12,23 @@
        preserveAspectRatio="xMidYMid meet"
        class="fretboard">
 
-    <!-- Strings -->
-    <line class="string-line" x1="10" y1="10" x2="10" y2="190" />
-    <line class="string-line" x1="40" y1="10" x2="40" y2="190" />
-    <line class="string-line" x1="70" y1="10" x2="70" y2="190" />
-    <line class="string-line" x1="100" y1="10" x2="100" y2="190" />
-    <line class="string-line" x1="130" y1="10" x2="130" y2="190" />
-    <line class="string-line" x1="160" y1="10" x2="160" y2="190" />
+    <!-- inject:strings -->
+    <!-- START strings -->
+<line class="string-line" x1="10" y1="30" x2="10" y2="210" />
+<line class="string-line" x1="40" y1="30" x2="40" y2="210" />
+<line class="string-line" x1="70" y1="30" x2="70" y2="210" />
+<line class="string-line" x1="100" y1="30" x2="100" y2="210" />
+<line class="string-line" x1="130" y1="30" x2="130" y2="210" />
+<line class="string-line" x1="160" y1="30" x2="160" y2="210" />
+    <!-- END strings -->
 
     <!-- inject:frets -->
     <!-- START frets -->
-    <line class="fret-bar" x1="8" y1="10" x2="162" y2="10" />
-    <line class="fret-bar" x1="10" y1="50" x2="160" y2="50" />
-    <line class="fret-bar" x1="10" y1="90" x2="160" y2="90" />
-    <line class="fret-bar" x1="10" y1="130" x2="160" y2="130" />
-    <line class="fret-bar" x1="10" y1="170" x2="160" y2="170" />
+    <line class="fret-bar" x1="8" y1="30" x2="162" y2="30" />
+    <line class="fret-bar" x1="10" y1="70" x2="160" y2="70" />
+    <line class="fret-bar" x1="10" y1="110" x2="160" y2="110" />
+    <line class="fret-bar" x1="10" y1="150" x2="160" y2="150" />
+    <line class="fret-bar" x1="10" y1="190" x2="160" y2="190" />
     <!-- END frets -->
 
     <!-- inject:positions -->
