show all played notes

--- a/SvgPrimer/chord-c-major.html
+++ b/SvgPrimer/chord-c-major.html
@@ -13,7 +13,6 @@
        class="fretboard">
 
     <!-- inject:strings -->
-    <!-- START strings -->
 <line class="string-line" x1="10" y1="30" x2="10" y2="210" />
 <line class="string-line" x1="40" y1="30" x2="40" y2="210" />
 <line class="string-line" x1="70" y1="30" x2="70" y2="210" />
@@ -23,23 +22,24 @@
     <!-- END strings -->
 
     <!-- inject:frets -->
-    <!-- START frets -->
-    <line class="fret-bar" x1="8" y1="30" x2="162" y2="30" />
-    <line class="fret-bar" x1="10" y1="70" x2="160" y2="70" />
-    <line class="fret-bar" x1="10" y1="110" x2="160" y2="110" />
-    <line class="fret-bar" x1="10" y1="150" x2="160" y2="150" />
-    <line class="fret-bar" x1="10" y1="190" x2="160" y2="190" />
+<line class="fret-bar" x1="8" y1="30" x2="162" y2="30" />
+<line class="fret-bar" x1="10" y1="70" x2="160" y2="70" />
+<line class="fret-bar" x1="10" y1="110" x2="160" y2="110" />
+<line class="fret-bar" x1="10" y1="150" x2="160" y2="150" />
+<line class="fret-bar" x1="10" y1="190" x2="160" y2="190" />
     <!-- END frets -->
 
     <!-- inject:positions -->
-    <!-- START positions -->
-    <text class="fret-label" x="85" y="-2">C Major</text>
-    <text class="string-muted" x="10" y="25">X</text>
-    <circle class="dot-active" cx="40" cy="139" r="6" />
-    <circle class="dot-active" cx="70" cy="99" r="6" />
-    <text class="fret-label" x="100" y="25">0</text>
-    <circle class="dot-active" cx="130" cy="59" r="6" />
-    <text class="fret-label" x="160" y="25">0</text>
+<text class="fret-label" x="85" y="-2">C Major</text>
+<text class="string-muted" x="10" y="25">X</text>
+<circle class="dot-active" cx="40" cy="139" r="6" />
+<text class="note-label" x="40" y="129">C</text>
+<circle class="dot-active" cx="70" cy="99" r="6" />
+<text class="note-label" x="70" y="89">E</text>
+<text class="open-note" x="100" y="25">G</text>
+<circle class="dot-active" cx="130" cy="59" r="6" />
+<text class="note-label" x="130" y="49">C</text>
+<text class="open-note" x="160" y="25">E</text>
     <!-- END positions -->
   </svg>
 </body>
