--- a/SvgPrimer/chord-a-major.html
+++ b/SvgPrimer/chord-a-major.html
@@ -32,13 +32,18 @@
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">A Major</text>
 <text class="string-muted" x="10" y="25">X</text>
+<rect class="note-box" x="32" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="40" y="25">A</text>
 <circle class="dot-active" cx="70" cy="99" r="6" />
+<rect class="note-box" x="62" y="77" width="16" height="16" rx="2" />
 <text class="note-label" x="70" y="89">E</text>
 <circle class="dot-active" cx="100" cy="99" r="6" />
+<rect class="note-box" x="92" y="77" width="16" height="16" rx="2" />
 <text class="note-label" x="100" y="89">A</text>
 <circle class="dot-active" cx="130" cy="99" r="6" />
+<rect class="note-box" x="122" y="77" width="16" height="16" rx="2" />
 <text class="note-label" x="130" y="89">C#</text>
+<rect class="note-box" x="152" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="160" y="25">E</text>
     <!-- END positions -->
   </svg>
