--- a/SvgPrimer/chord-c-major.html
+++ b/SvgPrimer/chord-c-major.html
@@ -33,12 +33,17 @@
 <text class="fret-label" x="85" y="-2">C Major</text>
 <text class="string-muted" x="10" y="25">X</text>
 <circle class="dot-active" cx="40" cy="139" r="6" />
+<rect class="note-box" x="32" y="117" width="16" height="16" rx="2" />
 <text class="note-label" x="40" y="129">C</text>
 <circle class="dot-active" cx="70" cy="99" r="6" />
+<rect class="note-box" x="62" y="77" width="16" height="16" rx="2" />
 <text class="note-label" x="70" y="89">E</text>
+<rect class="note-box" x="92" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="100" y="25">G</text>
 <circle class="dot-active" cx="130" cy="59" r="6" />
+<rect class="note-box" x="122" y="37" width="16" height="16" rx="2" />
 <text class="note-label" x="130" y="49">C</text>
+<rect class="note-box" x="152" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="160" y="25">E</text>
     <!-- END positions -->
   </svg>
