--- a/SvgPrimer/chord-d-major.html
+++ b/SvgPrimer/chord-d-major.html
@@ -33,12 +33,16 @@
 <text class="fret-label" x="85" y="-2">D Major</text>
 <text class="string-muted" x="10" y="25">X</text>
 <text class="string-muted" x="40" y="25">X</text>
+<rect class="note-box" x="62" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="70" y="25">D</text>
 <circle class="dot-active" cx="100" cy="99" r="6" />
+<rect class="note-box" x="92" y="77" width="16" height="16" rx="2" />
 <text class="note-label" x="100" y="89">A</text>
 <circle class="dot-active" cx="130" cy="139" r="6" />
+<rect class="note-box" x="122" y="117" width="16" height="16" rx="2" />
 <text class="note-label" x="130" y="129">D</text>
 <circle class="dot-active" cx="160" cy="99" r="6" />
+<rect class="note-box" x="152" y="77" width="16" height="16" rx="2" />
 <text class="note-label" x="160" y="89">F#</text>
     <!-- END positions -->
   </svg>
