--- a/SvgPrimer/chord-e-minor.html
+++ b/SvgPrimer/chord-e-minor.html
@@ -31,13 +31,19 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">E minor</text>
+<rect class="note-box" x="2" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="10" y="25">E</text>
 <circle class="dot-active" cx="40" cy="99" r="6" />
+<rect class="note-box" x="32" y="77" width="16" height="16" rx="2" />
 <text class="note-label" x="40" y="89">B</text>
 <circle class="dot-active" cx="70" cy="99" r="6" />
+<rect class="note-box" x="62" y="77" width="16" height="16" rx="2" />
 <text class="note-label" x="70" y="89">E</text>
+<rect class="note-box" x="92" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="100" y="25">G</text>
+<rect class="note-box" x="122" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="130" y="25">B</text>
+<rect class="note-box" x="152" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="160" y="25">E</text>
     <!-- END positions -->
   </svg>
