--- a/SvgPrimer/chord-fadd9.html
+++ b/SvgPrimer/chord-fadd9.html
@@ -34,12 +34,16 @@
 <text class="string-muted" x="10" y="25">X</text>
 <text class="string-muted" x="40" y="25">X</text>
 <circle class="dot-active" cx="70" cy="139" r="6" />
+<rect class="note-box" x="62" y="117" width="16" height="16" rx="2" />
 <text class="note-label" x="70" y="129">F</text>
 <circle class="dot-active" cx="100" cy="99" r="6" />
+<rect class="note-box" x="92" y="77" width="16" height="16" rx="2" />
 <text class="note-label" x="100" y="89">A</text>
 <circle class="dot-active" cx="130" cy="59" r="6" />
+<rect class="note-box" x="122" y="37" width="16" height="16" rx="2" />
 <text class="note-label" x="130" y="49">C</text>
 <circle class="dot-active" cx="160" cy="139" r="6" />
+<rect class="note-box" x="152" y="117" width="16" height="16" rx="2" />
 <text class="note-label" x="160" y="129">G</text>
     <!-- END positions -->
   </svg>
