--- a/SvgPrimer/chord-e-minor.html
+++ b/SvgPrimer/chord-e-minor.html
@@ -7,18 +7,18 @@
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg"
-       width="200" height="200"
-       viewBox="-10 -20 220 220"
+       width="200" height="280"
+       viewBox="-10 -20 220 300"
        preserveAspectRatio="xMidYMid meet"
        class="fretboard">
 
     <!-- inject:strings -->
-<line class="string-line" x1="10" y1="30" x2="10" y2="210" />
-<line class="string-line" x1="40" y1="30" x2="40" y2="210" />
-<line class="string-line" x1="70" y1="30" x2="70" y2="210" />
-<line class="string-line" x1="100" y1="30" x2="100" y2="210" />
-<line class="string-line" x1="130" y1="30" x2="130" y2="210" />
-<line class="string-line" x1="160" y1="30" x2="160" y2="210" />
+<line class="string-line" x1="10" y1="30" x2="10" y2="250" />
+<line class="string-line" x1="40" y1="30" x2="40" y2="250" />
+<line class="string-line" x1="70" y1="30" x2="70" y2="250" />
+<line class="string-line" x1="100" y1="30" x2="100" y2="250" />
+<line class="string-line" x1="130" y1="30" x2="130" y2="250" />
+<line class="string-line" x1="160" y1="30" x2="160" y2="250" />
     <!-- END strings -->
 
     <!-- inject:frets -->
@@ -27,6 +27,7 @@
 <line class="fret-bar" x1="10" y1="110" x2="160" y2="110" />
 <line class="fret-bar" x1="10" y1="150" x2="160" y2="150" />
 <line class="fret-bar" x1="10" y1="190" x2="160" y2="190" />
+<line class="fret-bar" x1="10" y1="230" x2="160" y2="230" />
     <!-- END frets -->
 
     <!-- inject:positions -->
