--- a/SvgPrimer/svg_chord_output/chord-d7-version-2.html
+++ b/SvgPrimer/svg_chord_output/chord-d7-version-2.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>E minor – Fretboard Diagram</title>
-  <link rel="stylesheet" href="fretboard.css">
+  <title>D7 version 2 – Fretboard Diagram</title>
+  <link rel="stylesheet" href="../css/fretboard.css">
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg"
@@ -31,21 +31,21 @@
     <!-- END frets -->
 
     <!-- inject:positions -->
-<text class="fret-label" x="85" y="-2">E minor</text>
-<rect class="note-box" x="2" y="13" width="16" height="16" rx="2" />
-<text class="open-note" x="10" y="25">E</text>
-<circle class="dot-active" cx="40" cy="99" r="6" />
-<rect class="note-box" x="32" y="77" width="16" height="16" rx="2" />
-<text class="note-label" x="40" y="89">B</text>
-<circle class="dot-active" cx="70" cy="99" r="6" />
-<rect class="note-box" x="62" y="77" width="16" height="16" rx="2" />
-<text class="note-label" x="70" y="89">E</text>
-<rect class="note-box" x="92" y="13" width="16" height="16" rx="2" />
-<text class="open-note" x="100" y="25">G</text>
-<rect class="note-box" x="122" y="13" width="16" height="16" rx="2" />
-<text class="open-note" x="130" y="25">B</text>
-<rect class="note-box" x="152" y="13" width="16" height="16" rx="2" />
-<text class="open-note" x="160" y="25">E</text>
+<text class="fret-label" x="85" y="-2">D7 version 2</text>
+<text class="string-muted" x="10" y="25">X</text>
+<circle class="dot-active" cx="40" cy="219" r="6" />
+<rect class="note-box" x="32" y="197" width="16" height="16" rx="2" />
+<text class="note-label" x="40" y="209">D</text>
+<circle class="dot-active" cx="70" cy="179" r="6" />
+<rect class="note-box" x="62" y="157" width="16" height="16" rx="2" />
+<text class="note-label" x="70" y="169">F#</text>
+<circle class="dot-active" cx="100" cy="219" r="6" />
+<rect class="note-box" x="92" y="197" width="16" height="16" rx="2" />
+<text class="note-label" x="100" y="209">C</text>
+<circle class="dot-active" cx="130" cy="139" r="6" />
+<rect class="note-box" x="122" y="117" width="16" height="16" rx="2" />
+<text class="note-label" x="130" y="129">D</text>
+<text class="string-muted" x="160" y="25">X</text>
     <!-- END positions -->
   </svg>
 </body>
