--- a/SvgPrimer/svg_chord_output/chord-b7.html
+++ b/SvgPrimer/svg_chord_output/chord-b7.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <title>B7 – Fretboard Diagram</title>
   <link rel="stylesheet" href="../css/fretboard.css">
+    <style>
+     .chord-comment {
+    font-family: sans-serif;
+    font-size: 12px;
+    fill: #333;
+    }
+</style>
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg"
