--- a/SvgPrimer/svg_chord_output/chord-d-major.html
+++ b/SvgPrimer/svg_chord_output/chord-d-major.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <title>D Major – Fretboard Diagram</title>
   <link rel="stylesheet" href="../css/fretboard.css">
+    <style>
+     .chord-comment {
+    font-family: sans-serif;
+    font-size: 12px;
+    fill: #333;
+    }
+</style>
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg"
@@ -32,6 +39,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">D Major</text>
+<text class="chord-comment" x="180" y="18">stuff 5</text>
 <text class="string-muted" x="10" y="25">X</text>
 <text class="string-muted" x="40" y="25">X</text>
 <rect class="note-box" x="62" y="13" width="16" height="16" rx="2" />
