--- a/SvgPrimer/svg_chord_output/chord-e-minor.html
+++ b/SvgPrimer/svg_chord_output/chord-e-minor.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <title>E minor – Fretboard Diagram</title>
   <link rel="stylesheet" href="../css/fretboard.css">
+    <style>
+     .chord-comment {
+    font-family: sans-serif;
+    font-size: 12px;
+    fill: #333;
+    }
+</style>
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg"
@@ -32,6 +39,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">E minor</text>
+<text class="chord-comment" x="180" y="18">stuff 6</text>
 <rect class="note-box" x="2" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="10" y="25">E</text>
 <circle class="dot-active" cx="40" cy="99" r="6" />
