--- a/SvgPrimer/svg_chord_output/chord-emajor-7.html
+++ b/SvgPrimer/svg_chord_output/chord-emajor-7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>D6 – Fretboard Diagram</title>
+  <title>Emajor 7 – Fretboard Diagram</title>
   <link rel="stylesheet" href="../css/fretboard.css">
     <style>
      .chord-comment {
@@ -38,23 +38,22 @@
     <!-- END frets -->
 
     <!-- inject:positions -->
-<text class="fret-label" x="85" y="-2">D6</text>
-<text class="string-muted" x="10" y="25">X</text>
-<circle class="dot-active" cx="40" cy="219" r="6" />
-<rect class="note-box" x="32" y="197" width="16" height="16" rx="2" />
-<text class="note-label" x="40" y="209">D</text>
-<circle class="dot-active" cx="70" cy="299" r="6" />
-<rect class="note-box" x="62" y="277" width="16" height="16" rx="2" />
-<text class="note-label" x="70" y="289">A</text>
-<circle class="dot-active" cx="100" cy="299" r="6" />
-<rect class="note-box" x="92" y="277" width="16" height="16" rx="2" />
-<text class="note-label" x="100" y="289">D</text>
-<circle class="dot-active" cx="130" cy="299" r="6" />
-<rect class="note-box" x="122" y="277" width="16" height="16" rx="2" />
-<text class="note-label" x="130" y="289">F#</text>
-<circle class="dot-active" cx="160" cy="299" r="6" />
-<rect class="note-box" x="152" y="277" width="16" height="16" rx="2" />
-<text class="note-label" x="160" y="289">B</text>
+<text class="fret-label" x="85" y="-2">Emajor 7</text>
+<rect class="note-box" x="2" y="13" width="16" height="16" rx="2" />
+<text class="open-note" x="10" y="25">E</text>
+<circle class="dot-active" cx="40" cy="99" r="6" />
+<rect class="note-box" x="32" y="77" width="16" height="16" rx="2" />
+<text class="note-label" x="40" y="89">B</text>
+<circle class="dot-active" cx="70" cy="59" r="6" />
+<rect class="note-box" x="62" y="37" width="16" height="16" rx="2" />
+<text class="note-label" x="70" y="49">D#</text>
+<circle class="dot-active" cx="100" cy="59" r="6" />
+<rect class="note-box" x="92" y="37" width="16" height="16" rx="2" />
+<text class="note-label" x="100" y="49">G#</text>
+<rect class="note-box" x="122" y="13" width="16" height="16" rx="2" />
+<text class="open-note" x="130" y="25">B</text>
+<rect class="note-box" x="152" y="13" width="16" height="16" rx="2" />
+<text class="open-note" x="160" y="25">E</text>
     <!-- END positions -->
   </svg>
 </body>
