--- a/SvgPrimer/svg_chord_output/chord-fadd9.html
+++ b/SvgPrimer/svg_chord_output/chord-fadd9.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <title>Fadd9 – Fretboard Diagram</title>
   <link rel="stylesheet" href="../css/fretboard.css">
+    <style>
+     .chord-comment {
+    font-family: sans-serif;
+    font-size: 12px;
+    fill: #333;
+    }
+</style>
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg"
@@ -32,6 +39,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">Fadd9</text>
+<text class="chord-comment" x="180" y="18">stuff 3</text>
 <text class="string-muted" x="10" y="25">X</text>
 <text class="string-muted" x="40" y="25">X</text>
 <circle class="dot-active" cx="70" cy="139" r="6" />
