--- a/SvgPrimer/svg_chord_output/chord-g7-sus4.html
+++ b/SvgPrimer/svg_chord_output/chord-g7-sus4.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <title>G7 sus4 – Fretboard Diagram</title>
   <link rel="stylesheet" href="../css/fretboard.css">
+    <style>
+     .chord-comment {
+    font-family: sans-serif;
+    font-size: 12px;
+    fill: #333;
+    }
+</style>
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg"
@@ -32,6 +39,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">G7 sus4</text>
+<text class="chord-comment" x="180" y="18">stuff 7</text>
 <circle class="dot-active" cx="10" cy="139" r="6" />
 <rect class="note-box" x="2" y="117" width="16" height="16" rx="2" />
 <text class="note-label" x="10" y="129">G</text>
