--- a/SvgPrimer/svg_chord_output/chord-a-sus2.html
+++ b/SvgPrimer/svg_chord_output/chord-a-sus2.html
@@ -5,10 +5,10 @@
   <title>A sus2 – Fretboard Diagram</title>
   <link rel="stylesheet" href="../css/fretboard.css">
     <style>
-     .chord-comment {
-    font-family: sans-serif;
-    font-size: 12px;
-    fill: #333;
+    text.chord-comment {
+        font-family: sans-serif;
+        font-size: 12px;
+        fill: #333;
     }
 </style>
 </head>
