update chord output

--- a/SvgPrimer/svg_chord_output/chord-e-minor.html
+++ b/SvgPrimer/svg_chord_output/chord-e-minor.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg"
-       width="200" height="280"
-       viewBox="-10 -20 220 300"
+       width="600" height="600"
+       viewBox="-10 -20 500 500"
        preserveAspectRatio="xMidYMid meet"
        class="fretboard">
 
@@ -32,7 +32,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">E minor</text>
-<text class="chord-comment" x="180" y="18">stuff 6</text>
+<text class="chord-comment" x="300" y="18" text-anchor="middle">stuff 6</text>
 <rect class="note-box" x="2" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="10" y="25">E</text>
 <circle class="dot-active" cx="40" cy="99" r="6" />
