--- a/SvgPrimer/svg_chord_output/chord-c-major.html
+++ b/SvgPrimer/svg_chord_output/chord-c-major.html
@@ -32,7 +32,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">C Major</text>
-<text class="chord-comment" x="300" y="18" text-anchor="middle">stuff 2</text>
+<text class="chord-comment" x="190" y="295" text-anchor="right">stuff 2</text>
 <text class="string-muted" x="10" y="25">X</text>
 <circle class="dot-active" cx="40" cy="139" r="6" />
 <rect class="note-box" x="32" y="117" width="16" height="16" rx="2" />
