--- a/SvgPrimer/svg_chord_output/chord-e7-dominant-version-1.html
+++ b/SvgPrimer/svg_chord_output/chord-e7-dominant-version-1.html
@@ -32,7 +32,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">E7 (dominant) version 1</text>
-<text class="chord-comment" x="300" y="18" text-anchor="middle">Can&#x27;t take my eyes off you</text>
+<text class="chord-comment" x="190" y="295" text-anchor="right">Can&#x27;t take my eyes off you</text>
 <rect class="note-box" x="2" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="10" y="25">E</text>
 <circle class="dot-active" cx="40" cy="99" r="6" />
