--- a/SvgPrimer/svg_chord_output/chord-fadd9.html
+++ b/SvgPrimer/svg_chord_output/chord-fadd9.html
@@ -32,7 +32,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">Fadd9</text>
-<text class="chord-comment" x="300" y="18" text-anchor="middle">stuff 3</text>
+<text class="chord-comment" x="190" y="295" text-anchor="right">stuff 3</text>
 <text class="string-muted" x="10" y="25">X</text>
 <text class="string-muted" x="40" y="25">X</text>
 <circle class="dot-active" cx="70" cy="139" r="6" />
