--- a/SvgPrimer/svg_chord_output/chord-a-major.html
+++ b/SvgPrimer/svg_chord_output/chord-a-major.html
@@ -32,7 +32,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">A Major</text>
-<text class="chord-comment" x="300" y="18" text-anchor="middle">stuff 1</text>
+<text class="chord-comment" x="190" y="295" text-anchor="right">stuff 1</text>
 <text class="string-muted" x="10" y="25">X</text>
 <rect class="note-box" x="32" y="13" width="16" height="16" rx="2" />
 <text class="open-note" x="40" y="25">A</text>
