--- a/SvgPrimer/svg_chord_output/chord-b-minor.html
+++ b/SvgPrimer/svg_chord_output/chord-b-minor.html
@@ -32,7 +32,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">B minor</text>
-<text class="chord-comment" x="300" y="18" text-anchor="middle">stuff 9</text>
+<text class="chord-comment" x="190" y="295" text-anchor="right">stuff 9</text>
 <text class="string-muted" x="10" y="25">X</text>
 <circle class="dot-active" cx="40" cy="99" r="6" />
 <rect class="note-box" x="32" y="77" width="16" height="16" rx="2" />
