--- a/SvgPrimer/svg_chord_output/chord-f.html
+++ b/SvgPrimer/svg_chord_output/chord-f.html
@@ -32,7 +32,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">F*</text>
-<text class="chord-comment" x="300" y="18" text-anchor="middle">stuff 11</text>
+<text class="chord-comment" x="190" y="295" text-anchor="right">stuff 11</text>
 <text class="string-muted" x="10" y="25">X</text>
 <text class="string-muted" x="40" y="25">X</text>
 <circle class="dot-active" cx="70" cy="139" r="6" />
