--- a/SvgPrimer/svg_chord_output/chord-g7-sus4.html
+++ b/SvgPrimer/svg_chord_output/chord-g7-sus4.html
@@ -32,7 +32,7 @@
 
     <!-- inject:positions -->
 <text class="fret-label" x="85" y="-2">G7 sus4</text>
-<text class="chord-comment" x="300" y="18" text-anchor="middle">stuff 7</text>
+<text class="chord-comment" x="190" y="295" text-anchor="right">stuff 7</text>
 <circle class="dot-active" cx="10" cy="139" r="6" />
 <rect class="note-box" x="2" y="117" width="16" height="16" rx="2" />
 <text class="note-label" x="10" y="129">G</text>
